fix blog post code block on mobile

--- a/components/code-snippet/code-snippet.module.css
+++ b/components/code-snippet/code-snippet.module.css
@@ -1,3 +1,8 @@
+.code-snippet {
+  max-width: 100%;
+  overflow-x: auto; /* Change from hidden to auto */
+}
+
 .code-snippet .header {
   padding: var(--spacing-4);
   display: flex;
@@ -11,6 +16,7 @@
   overflow-x: auto;
   background-color: rgb(var(--color-surface-secondary) / 0.06);
   position: relative;
+  -webkit-overflow-scrolling: touch;
 }
 
 .code-snippet .content ::-webkit-scrollbar {
@@ -20,10 +26,12 @@
 .code-snippet .content :global(pre) {
   margin: 0 !important;
   font-size: var(--fontSize-sm) !important;
-  word-wrap: break-word;
+  white-space: pre; /* Change from pre-wrap to pre */
+  word-break: normal; /* Change from break-all to normal */
   background-color: var(--color-surface-secondary) !important;
   outline-color: theme('colors.border.DEFAULT');
   padding: 0;
+  min-width: max-content; /* Add this line */
 }
 
 .code-snippet .content :global(pre) :global(span.line-indicator) {
@@ -38,5 +46,9 @@
   width: 2em;
   text-align: end;
   padding: 0 0.5em;
+  margin-right: 0.5em;
+}
+
+.code-snippet .content :global(pre) :global(span.line) {
   margin-right: 0.5em;
 }
